# mlinit

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
mlinit/templates/: README.md.j2  train.py.j2
src/: core.py
src/ml_init/: README.md  __init__.py  cli.py  generator.py  integrations.py  post_install.py  presets.py
src/templates/: ci.yml.j2
